--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.5",
     "next": "14.0.2",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18"
   },
