--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.6.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.2",
     "next-auth": "^5.0.0-beta.3",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.0.1",
     "electron": "^27.0.4",
     "postcss": "^8",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
